--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon ./index.js",
-    "css" :  "postcss ./public/css/tailwind.css -o ./build/app.css"
+    "css" :  "postcss ./public/css/tailwind.css -o ./build/app.css --watch"
   },
   "keywords": [
     "MVC",
