--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "mysql2": "^3.14.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.6"
