--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.6"
   },
