--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "nodemon ./index.js",
     "css": "postcss ./public/css/tailwind.css -o ./build/app.css --watch",
-    "js": "webpack --watch"
+    "js": "webpack --watch",
+    "db:import": "node ./seed/seeder.js -i",
+    "db:delete": "node ./seed/seeder.js -d"
   },
   "keywords": [
     "MVC",
